--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -117,6 +117,7 @@
 		@include breakpoint($tab-portrait){
 			flex: 0 auto;
 			margin: 0 1% 1% 0;
+			margin: 0 5px 5px 0;
 			width: auto;
 		}
 	}
